# parallel-vector-database

./: .gitignore  CMakeLists.txt  README.md  output-280321.err  output-280321.out  output-280322.err  output-280322.out  output-286746.out  output-293333.out  output-293335.out  output-293336.err  output-293336.out  output-304336.out  output-304339.out  output-343589.out  output-343594.out  output-343609.out  output-343611.err  output-343611.out  output-343675.err  output-343675.out  output-343691.err  output-343691.out  output-343705.out  output-343735.out  output-343746.err  output-343746.out  output-343747.err  output-343747.out  output-343772.err  output-343772.out  output-343789.err  output-343789.out  output-343799.err  output-343799.out  output-343801.err  output-343801.out  output-344014.err  output-344016.out  output-344575.err  (+115 more)
FinalProject/: CMakeLists.txt  README.md
FinalProject/archive/output_files/: output-286744.out  output-286745.out  output-345481.out  output-345553.out  output-345558.out  output-348546.out  output-348585.out  output-348604.err  output-348604.out  output-348625.err
FinalProject/archive/results/: RESULTS.md
FinalProject/archive/slurm/: ivf_pq_basic.slurm
FinalProject/benchmarks/results/: baseline.csv  naive_knn.csv  optimized_knn.csv
FinalProject/final_results/: output-352694.out  output-352699.out  output-352713.out
FinalProject/report/: main.tex
FinalProject/slurm/: baseline_knn.slurm  hello_gpu.slurm  ivf_pq_basic.slurm  ivf_pq_optimized.slurm  naive_knn.slurm  optimized_knn.slurm
FinalProject/src/gpu/: hello_gpu.cu  ivf_pq_basic.cu  ivf_pq_optimized.cu  naive_knn.cu  optimized_knn.cu
archive/output_files/: output-286744.err  output-286745.err  output-286747.out  output-345557.out  output-348067.err  output-348559.out  output-348636.err
archive/results/: baseline.csv  ivf_pq_basic.csv
archive/slurm/: baseline_knn.slurm  optimized_knn.slurm
benchmarks/results/: RESULTS.md  baseline.csv  ivf_pq_basic.csv  ivf_pq_optimized.csv  naive_knn.csv  optimized_knn.csv
final_results/: output-352698.out  output-352710.out
report/: main.tex
slurm/: baseline_knn.slurm  baseline_knn_avyakt.slurm  baseline_knn_harshit.slurm  hello_gpu.slurm  ivf_pq_basic.slurm  ivf_pq_fast.slurm  ivf_pq_optimized.slurm  ivf_pq_optimized_1m.slurm  naive_knn.slurm  optimized_knn.slurm  optimized_knn_1m.slurm  output-343606.out
src/common/: utils.h
src/cpu/: baseline_knn.cpp
src/gpu/: ivf_pq_basic.cu  ivf_pq_optimized.cu  naive_knn.cu  optimized_knn.cu
